--- a/index.html
+++ b/index.html
@@ -1,79 +1,14 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Repositório GitHub</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #161b22;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            height: 100vh;
-        }
-
-        .content {
-            text-align: center;
-        }
-
-        h1 {
-            color: #f5f5f5;
-            margin-top: 50px;
-            font-size: 36px;
-            text-transform: uppercase;
-            letter-spacing: 2px;
-        }
-
-        p {
-            color: #f5f5f5;
-            line-height: 1.6;
-            margin: 20px;
-            font-size: 18px;
-        }
-
-        .logo {
-            display: block;
-            margin: 0 auto;
-            max-width: 200px;
-            height: auto;
-            margin-top: 50px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-            border-radius: 50%;
-        }
-
-        .social-icons {
-            margin-top: 30px;
-        }
-
-        .social-icons a {
-            display: inline-block;
-            margin-right: 10px;
-            color: #f5f5f5;
-            font-size: 24px;
-            transition: color 0.3s ease;
-        }
-
-        .social-icons a:hover {
-            color: #b3b3b3;
-        }
-    </style>
+    <link rel="stylesheet" href="bluestyle.css">
+    <title>Hello World!</title>
 </head>
-
 <body>
-    <div class="content">
-        <h1>GitHub</h1>
-        <img class="logo" src="https://cdn-icons-png.flaticon.com/512/25/25231.png" alt="Logo do GitHub">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis pellentesque cursus turpis a laoreet. Nunc eget
-            justo convallis, ultrices erat vitae, cursus nisi. Sed magna massa, blandit eget facilisis vitae, venenatis a
-            mauris. Mauris id nulla sit amet est cursus blandit. Pellentesque aliquam lorem enim. Fusce sit amet mattis
-            felis. Aenean fringilla ligula et erat pharetra, vel posuere purus condimentum. Fusce vel.
-        </p>
+    <h1>Hello world!</h1>
+<p>This is the first file in my new Git Repo.</p>
 </body>
-
 </html>
